--- a/_notebooks/2023-10-12-Unit4.ipynb
+++ b/_notebooks/2023-10-12-Unit4.ipynb
@@ -90,7 +90,201 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4.5 Informal Code Analysis"
+    "# 4.5 Informal Code Analysis\n",
+    "\n",
+    "<b>Learning objective</b>: Compute statement execution counts & informal run-time comparison of iterative statements \n",
+    "\n",
+    "<b>Essential Knowledge</b>: A statement execution count indicates the number of times a statement is executed by the program "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3> What IS informal code analysis? </h3>\n",
+    "\n",
+    "Answer: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// CODE EXAMPLE #1 (for loop)\n",
+    "public class InformalCodeAnalysis {\n",
+    "    public static void main(String[] args) {\n",
+    "        int count = 0;\n",
+    "        for (int k = 0; k < 30; k++)\n",
+    "        {\n",
+    "            if (k % 3 == 0) // statement 1\n",
+    "            {\n",
+    "                count++; // statement 2 \n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>How many times will statement 1 execute? </b>\n",
+    "\n",
+    "Answer:\n",
+    "\n",
+    "<b>How many times will statement 2 execute?</b>\n",
+    "\n",
+    "Answer: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// CODE EXAMPLE #2 (for loop)\n",
+    "public class InformalCodeAnalysis {\n",
+    "    public static void main(String[] args) {\n",
+    "        int count = 0;\n",
+    "        for (int k = 4; k < 30; k+=3)\n",
+    "        {\n",
+    "            count++; // statement 3\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>How many times will statement 3 execute?</b>\n",
+    "\n",
+    "Answer: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Rewrite the code segment below to have a faster run-time based on statement execution counts\n",
+    "for (int k = 0; k < 135; k++)\n",
+    "{\n",
+    "    if (k % 5 == 0)\n",
+    "    {\n",
+    "        System.out.println(k);\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// CODE EXAMPLE #3 (while loop)\n",
+    "\n",
+    "int num = (int)(Math.random() * 10);\n",
+    "while (num % 2 != 0)\n",
+    "{\n",
+    "    num = (int)(Math.random() * 10) // statement 4\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>What is the min/max number of times statement 4 will execute?</b>\n",
+    "\n",
+    "Answer: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// CODE EXAMPLE #4 (nested loop)\n",
+    "\n",
+    "for (int outer = 0; outer < 3; outer++)\n",
+    "{\n",
+    "    for (int inner = 0; inner < 4; inner++)\n",
+    "    {\n",
+    "        // statement #5\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>How many times will statement #5 execute?</b>\n",
+    "\n",
+    "Answer: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// CODE EXAMPLE #5 (nested loop)\n",
+    "\n",
+    "int k = 0;\n",
+    "while (k < 5)\n",
+    "{\n",
+    "    int x = (int)(Math.random() * 6) + 1;\n",
+    "    while (x != 6)\n",
+    "    {\n",
+    "        // statement #6\n",
+    "        x = (int)(Math.random() * 6) + 1;\n",
+    "    }\n",
+    "    k++; \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>How many times will statement #6 execute?</b>\n",
+    "\n",
+    "Answer: "
    ]
   },
   {
@@ -105,6 +299,133 @@
    "metadata": {},
    "source": [
     "# Hacks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>4.5</h2>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<b>#1 How many times will statement #1 and statement #2 execute in the code segments below? </b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for (int k = 0; k < 1000; k++)\n",
+    "{\n",
+    "    // statement #1 \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for (int k = 6; k < 50; k++)\n",
+    "{\n",
+    "    // statement #2\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>#2 How many times will statement #3 execute for the code segment below?</b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "int k = 1;\n",
+    "while (k <=7)\n",
+    "{\n",
+    "    for (int z = 0; z < 4; z++)\n",
+    "    {\n",
+    "        // statement #3 \n",
+    "    }\n",
+    "    k++; \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>#3 Create 3 seperate code segments that execute a statement 10 times using: </b>\n",
+    "\n",
+    "(a) a for loop\n",
+    "\n",
+    "(b) a while loop\n",
+    "\n",
+    "(c) a nested loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// 3a code "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// 3b code "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// 3c code "
    ]
   }
  ],
