--- a/_notebooks/2023-10-12-Unit4.ipynb
+++ b/_notebooks/2023-10-12-Unit4.ipynb
@@ -59,6 +59,92 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Iterative statement that checks for condition\n",
+    "- Repeatedly execute a a block of code as long as the condition is met\n",
+    "- Condition specifies amount of times\n",
+    "\n",
+    "# for Loops vs. while Loops\n",
+    "- while Loops: use when number of iterations is unknown\n",
+    "- for Loops: use when number of iterations is known"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "int i = 0;\n",
+    "while (i < 5) {\n",
+    "    System.out.println(i);\n",
+    "    i++;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for (int i = 0; i < 5; i++) {\n",
+    "    System.out.println(i);\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Three parts in for loop header: variable initialization, Boolean (conditional) expression, and increment/decrement statement\n",
+    "\n",
+    "Question: Which part is which?\n",
+    "\n",
+    "- variable initialization (int i=0): sets variable before loop starts\n",
+    "- Boolean (conditional) expression (i < 5): defines condition for loop to run, in this case, the loop continues as long as i is less than 5, so loops 5 times i 05\n",
+    "- increment/decrement statement (i++): increases variable each time code block in the loop is executed, in this case it increases by 1\n",
+    "- variable can be used in the code block for other various reasons besides specifying how many times the loop will repeat\n",
+    "- Boolean (conditional) expression and increment/decrement statement together determine how many times the loop will repeat\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -430,8 +516,18 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Java",
+   "language": "java",
+   "name": "java"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "12.0.2+10"
   }
  },
  "nbformat": 4,
