--- a/_notebooks/2023-10-12-Unit4.ipynb
+++ b/_notebooks/2023-10-12-Unit4.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "---\n",
     "toc: true\n",
-    "comments: false\n",
+    "comments: true\n",
     "layout: post\n",
     "title: U4 | Iteration\n",
     "description: while Loops, for Loops, Developing Algorithms Using Strings, Nested Iteration, Informal code analysis >>> AP Exam Weighting 17.5-22.5% \n",
