--- a/_notebooks/2023-10-12-Unit4.ipynb
+++ b/_notebooks/2023-10-12-Unit4.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -17,6 +18,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,6 +26,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,6 +34,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -38,6 +42,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -45,6 +50,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -52,6 +58,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -145,6 +152,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -152,6 +160,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -159,6 +168,104 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LEARNING OBJECTIVES: \n",
+    "For algorithms in the context of a particular specification that involves ```String``` objects: \n",
+    "- identify standard algorithms \n",
+    "- modify standard algorithms \n",
+    "- develop an algorithm\n",
+    "\n",
+    "\n",
+    "**Java has many methods that are helpful when working with strings:**\n",
+    "\n",
+    "* ```String .substring``` --> retrieves portion of a string\n",
+    "* ```String .equals``` --> compares two strings\n",
+    "* ```String .length``` --> returns length of a string\n",
+    "* ```for Loop``` --> iterating through characters of a string\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "<h3> Finding a substring within a string </h3>\n",
+    "\n",
+    "We can use the \"window\" method:\n",
+    "\n",
+    "A \"window\" is created the same length as the substring. We then iterate through the main string in sections and compare to the substring \n",
+    "\n",
+    "For example: \n",
+    "\n",
+    "<h3> I T E R A T E </h3>with substring \"ERA\"\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public class StringFinder {\n",
+    "    public static void main(String[] args) {\n",
+    "        String word = \"iterate\";\n",
+    "        String sub = \"era\";\n",
+    "        boolean found = false; // will be set to true once substring is found \n",
+    "    \n",
+    "        for (int i = 0; i < word.length(); i++) { //iterating forwards: starting at first index (0) and going to the length of the word.. let's try word.length\n",
+    "            String portion = word.substring(i, i + sub.length());\n",
+    "            if (portion.equals(sub)) // make sure you use .equals!!\n",
+    "                found = true;\n",
+    "        }\n",
+    "    \n",
+    "        if (found)\n",
+    "            System.out.println(\"substring is found within string!\");\n",
+    "        else\n",
+    "            System.out.println(\"substring is NOT within string\");\n",
+    "    }\n",
+    "    \n",
+    "    }\n",
+    "    \n",
+    "    StringFinder.main(null);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4> POPCORN HACK: Run the code.. what happened? How can we fix it?</h4>\n",
+    "\n",
+    "Tell us below!\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "<h4> Another issue:</h4>\n",
+    "\n",
+    "<h3> I T E R A T E </h3> \n",
+    "What if our substring was the word \"RATE\"? Note that RATE is at the end of the whole string\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "<h3> HACKS </h3>\n",
+    "\n",
+    "**Create a algorithm similar to the one above. Except this time, use iteration to count the number of vowels within the main string.**\n",
+    "\n",
+    "HINT: Use the boolean expressions we have learned in previous lessons. Which would you use when comparing your \"window\" with multiple options of substrings?"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -166,6 +273,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -174,6 +282,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -210,6 +319,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -249,6 +359,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -286,6 +397,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -324,6 +436,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -372,6 +485,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -388,6 +502,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -395,6 +510,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -406,6 +522,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -440,6 +557,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -475,6 +593,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -523,6 +642,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -553,6 +673,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -587,6 +708,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -596,6 +718,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -603,6 +726,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -610,6 +734,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -617,6 +742,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -657,6 +783,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -685,6 +812,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
