--- a/_notebooks/2023-10-12-Unit4.ipynb
+++ b/_notebooks/2023-10-12-Unit4.ipynb
@@ -722,23 +722,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Hacks"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2>4.5</h2>"
+    "# 4.5 Hacks"
    ]
   },
   {
