--- a/_notebooks/2023-10-12-Unit4.ipynb
+++ b/_notebooks/2023-10-12-Unit4.ipynb
@@ -156,6 +156,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Other syntax for increment/decrement statement:\n",
+    "\n",
+    "|Operator | Example | Same As |\n",
+    "|----|--------|-----------|\n",
+    "| ++ |  i ++  | i = i + 1 |\n",
+    "| -- |  i --  | i = i - 1 |\n",
+    "| += | i += y | i = i + y |\n",
+    "| -= | i -= y | i = i - y |\n",
+    "| *= | i *= y | i = i * y |\n",
+    "| /= | i /= y | i = i / y |\n",
+    "| %= | i %= y | i = i % y |"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Popcorn Hacks\n",
+    "- Calculate and print the sum of all even numbers from 1 to a given positive integer 'n' (user input n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// code here"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Java for-each Loop\n",
+    "- for-each loop used to iterate through elements of arrays and collections (e.g. ArrayList)\n",
+    "- AKA enhanced for loop\n",
+    "### Syntax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for (dataType item : array) {\n",
+    "    // whatever here\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- array: array/collection\n",
+    "- item: variable each item of array/collection assigned is assigned to\n",
+    "- dataType - array/collection data type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "int[] numbers = {1, 7, -9, 4, 89};\n",
+    "for (int num: numbers) {\n",
+    "    System.out.println(num);\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 4.3 Developing Algorithms Using Strings"
    ]
   },
