--- a/_notebooks/2023-10-12-Unit4.ipynb
+++ b/_notebooks/2023-10-12-Unit4.ipynb
@@ -56,6 +56,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "8LcvRRKgiGt8"
+      },
       "source": [
         "- A while loop is a fundamental control structure in programming used for repeated execution of a block of code as long as a condition is true.\n",
         "- The loop starts by evaluating the condition. If the condition is true, the code inside the loop is executed.\n",
@@ -67,22 +70,27 @@
         "- It's essential to update the loop control variable within the loop to prevent infinite loops.\n",
         "- While loops are typically used for tasks such as iterating over collections or waiting for a specific condition to be met.\n",
         "- You can always break out of a while loop prematurely using the break statement."
-      ],
-      "metadata": {
-        "id": "8LcvRRKgiGt8"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Example of While Loops"
-      ],
       "metadata": {
         "id": "E8iapCcPija6"
-      }
+      },
+      "source": [
+        "## Example of While Loops"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Jq6_6Xz9iQ7T",
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [],
       "source": [
         "public class PyramidPattern {\n",
         "    public static void main(String[] args) {\n",
@@ -112,12 +120,7 @@
         "        }\n",
         "    }\n",
         "}"
-      ],
-      "metadata": {
-        "id": "Jq6_6Xz9iQ7T"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -156,11 +159,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "puqpCZjUiFbQ",
+        "outputId": "d0b6c4cd-efd4-48bc-94ae-a1a65f07ca7b",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "puqpCZjUiFbQ",
-        "outputId": "d0b6c4cd-efd4-48bc-94ae-a1a65f07ca7b"
+        }
       },
       "outputs": [
         {
@@ -187,11 +190,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "gZ19jPsGiFbS",
+        "outputId": "8b800081-760b-4b06-c86d-c867c9b1c841",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "gZ19jPsGiFbS",
-        "outputId": "8b800081-760b-4b06-c86d-c867c9b1c841"
+        }
       },
       "outputs": [
         {
@@ -213,6 +216,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "w9Hb_U8JiFbS"
@@ -222,11 +226,102 @@
         "\n",
         "Question: Which part is which?\n",
         "\n",
-        "- variable initialization (int i=0): sets variable before loop starts\n",
-        "- Boolean (conditional) expression (i < 5): defines condition for loop to run, in this case, the loop continues as long as i is less than 5, so loops 5 times i 05\n",
-        "- increment/decrement statement (i++): increases variable each time code block in the loop is executed, in this case it increases by 1\n",
+        "- variable initialization: \n",
+        "- Boolean (conditional) expression:\n",
+        "- increment/decrement statement:\n",
         "- variable can be used in the code block for other various reasons besides specifying how many times the loop will repeat\n",
         "- Boolean (conditional) expression and increment/decrement statement together determine how many times the loop will repeat\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Other syntax for increment/decrement statement:\n",
+        "\n",
+        "|Operator | Example | Same As |\n",
+        "|----|--------|-----------|\n",
+        "| ++ |  i ++  | i = i + 1 |\n",
+        "| -- |  i --  | i = i - 1 |\n",
+        "| += | i += y | i = i + y |\n",
+        "| -= | i -= y | i = i - y |\n",
+        "| *= | i *= y | i = i * y |\n",
+        "| /= | i /= y | i = i / y |\n",
+        "| %= | i %= y | i = i % y |"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Popcorn Hacks\n",
+        "- Calculate and print the sum of all even numbers from 1 to a given positive integer 'n' (user input n)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "// CODE CODE CODE HERE"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Java for-each Loop\n",
+        "- for-each loop used to iterate through elements of arrays and collections (e.g. ArrayList)\n",
+        "- AKA enhanced for loop"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "for (dataType item : array) {\n",
+        "    // whatever here\n",
+        "}"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "- array: array/collection\n",
+        "- item: variable each item of array/collection assigned is assigned to\n",
+        "- dataType - array/collection data type"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "int[] numbers = {1, 7, -9, 4, 89};\n",
+        "for (int num: numbers) {\n",
+        "    System.out.println(num);\n",
+        "}"
       ]
     },
     {
@@ -287,22 +382,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
+        "id": "NdBC9Hr5iFbT",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "NdBC9Hr5iFbT"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "substring is found within string!\n"
+          ]
+        }
+      ],
       "source": [
         "public class StringFinder {\n",
         "    public static void main(String[] args) {\n",
         "        String word = \"iterate\";\n",
-        "        String sub = \"era\";\n",
+        "        String sub = \"rate\";\n",
         "        boolean found = false; // will be set to true once substring is found\n",
         "\n",
-        "        for (int i = 0; i < word.length(); i++) { //iterating forwards: starting at first index (0) and going to the length of the word.. let's try word.length\n",
+        "        for (int i = 0; i <= word.length() - sub.length(); i++) { //iterating forwards: starting at first index (0) and going to the length of the word.. let's try word.length\n",
         "            String portion = word.substring(i, i + sub.length());\n",
         "            if (portion.equals(sub)) // make sure you use .equals!!\n",
         "                found = true;\n",
@@ -379,14 +482,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
+        "id": "SE-EnFk5iFbU",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "SE-EnFk5iFbU"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Outer loop iteration: 1\n",
+            "Inner loop iteration: 1\n",
+            "Inner loop iteration: 2\n",
+            "Outer loop iteration: 2\n",
+            "Inner loop iteration: 1\n",
+            "Inner loop iteration: 2\n",
+            "Outer loop iteration: 3\n",
+            "Inner loop iteration: 1\n",
+            "Inner loop iteration: 2\n"
+          ]
+        }
+      ],
       "source": [
         "public class NestedLoopsDemo {\n",
         "    public static void main(String[] args) {\n",
@@ -419,14 +538,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
+        "id": "WYOiIZ0hiFbU",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "WYOiIZ0hiFbU"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Outer loop iteration 1\n",
+            "Inner loop iteration 1\n",
+            "Inner loop iteration 2\n",
+            "Inner loop iteration 3\n",
+            "Outer loop iteration 2\n",
+            "Inner loop iteration 1\n",
+            "Inner loop iteration 2\n",
+            "Breaking inner loop\n",
+            "Outer loop iteration 3\n",
+            "Inner loop iteration 1\n",
+            "Inner loop iteration 2\n",
+            "Inner loop iteration 3\n"
+          ]
+        }
+      ],
       "source": [
         "public class BreakExample {\n",
         "    public static void main(String[] args) {\n",
@@ -462,10 +600,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "mvD8YS8giFbU",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "mvD8YS8giFbU"
+        }
       },
       "outputs": [],
       "source": [
@@ -501,14 +639,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
+        "id": "LBzvnBikiFbU",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "LBzvnBikiFbU"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Outer loop iteration 1\n",
+            "Inner loop iteration 1\n",
+            "Inner loop iteration 2\n",
+            "Inner loop iteration 3\n",
+            "Outer loop iteration 2\n",
+            "Inner loop iteration 1\n",
+            "Skipping inner loop iteration 2\n",
+            "Inner loop iteration 3\n",
+            "Outer loop iteration 3\n",
+            "Inner loop iteration 1\n",
+            "Inner loop iteration 2\n",
+            "Inner loop iteration 3\n"
+          ]
+        }
+      ],
       "source": [
         "public class ContinueExample {\n",
         "    public static void main(String[] args) {\n",
@@ -539,14 +696,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
+        "id": "i3FAExO2iFbV",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "i3FAExO2iFbV"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter the symbol you want to use: Enter the number of rows for the pyramid:     o\n",
+            "   ooo\n",
+            "  ooooo\n",
+            " ooooooo\n",
+            "ooooooooo\n"
+          ]
+        }
+      ],
       "source": [
         "import java.util.Scanner;\n",
         "\n",
@@ -634,10 +803,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "u-8M605aiFbV",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "u-8M605aiFbV"
+        }
       },
       "outputs": [],
       "source": [
@@ -675,10 +844,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "QVPEF82jiFbW",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "QVPEF82jiFbW"
+        }
       },
       "outputs": [],
       "source": [
@@ -709,10 +878,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "fv6VvS8AiFbW",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "fv6VvS8AiFbW"
+        }
       },
       "outputs": [],
       "source": [
@@ -730,10 +899,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "PAtLyFjKiFbX",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "PAtLyFjKiFbX"
+        }
       },
       "outputs": [],
       "source": [
@@ -761,10 +930,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "87I7g-oKiFbg",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "87I7g-oKiFbg"
+        }
       },
       "outputs": [],
       "source": [
@@ -794,10 +963,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "vHEVqsx3iFbh",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "vHEVqsx3iFbh"
+        }
       },
       "outputs": [],
       "source": [
@@ -850,10 +1019,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "4Xv5tRjViFbh",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "4Xv5tRjViFbh"
+        }
       },
       "outputs": [],
       "source": [
@@ -867,10 +1036,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "klZimcf_iFbh",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "klZimcf_iFbh"
+        }
       },
       "outputs": [],
       "source": [
@@ -893,10 +1062,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "J7zbFi5tiFbh",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "J7zbFi5tiFbh"
+        }
       },
       "outputs": [],
       "source": [
@@ -930,10 +1099,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "KyXT2RyMiFbh",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "KyXT2RyMiFbh"
+        }
       },
       "outputs": [],
       "source": [
@@ -944,10 +1113,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "9gSAz_D9iFbi",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "9gSAz_D9iFbi"
+        }
       },
       "outputs": [],
       "source": [
@@ -958,10 +1127,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "DFKyyHdiiFbi",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "DFKyyHdiiFbi"
+        }
       },
       "outputs": [],
       "source": [
@@ -970,6 +1139,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Java",
       "language": "java",
@@ -982,9 +1154,6 @@
       "name": "Java",
       "pygments_lexer": "java",
       "version": "12.0.2+10"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
