--- a/_notebooks/2023-10-17-Unit5.ipynb
+++ b/_notebooks/2023-10-17-Unit5.ipynb
@@ -64,10 +64,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "M1DPKTfr4wtH",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "M1DPKTfr4wtH"
+        }
       },
       "outputs": [],
       "source": [
@@ -143,10 +143,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "LV1vMkbI4wtJ",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "LV1vMkbI4wtJ"
+        }
       },
       "outputs": [],
       "source": [
@@ -181,10 +181,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "PQzM9T4s4wtJ",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "PQzM9T4s4wtJ"
+        }
       },
       "outputs": [],
       "source": [
@@ -239,10 +239,10 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "cz2TC9YF4wtJ",
         "vscode": {
           "languageId": "java"
-        },
-        "id": "cz2TC9YF4wtJ"
+        }
       },
       "outputs": [],
       "source": [
@@ -280,6 +280,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "DvVQA8DOTMCx"
+      },
       "source": [
         "Purpose: Mutators are used to change the values of the fields (attributes) of an object.\n",
         "\n",
@@ -300,22 +303,24 @@
         "Chaining: Mutators can be chained together in a single line for more fluent and concise code, e.g., person.setName(\"John\").setAge(30);.\n",
         "\n",
         "Immutable Objects: In some cases, mutators are not used, and instead, a new object with modified values is created. This approach is common in creating immutable objects in Java."
-      ],
-      "metadata": {
-        "id": "DvVQA8DOTMCx"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Example"
-      ],
       "metadata": {
         "id": "QmqfVAPnWYDp"
-      }
+      },
+      "source": [
+        "### Example"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "0IkL08CNTDMK"
+      },
+      "outputs": [],
       "source": [
         "public class UserAccount {\n",
         "    private String username;\n",
@@ -378,15 +383,13 @@
         "        userAccount.logout();\n",
         "    }\n",
         "}"
-      ],
-      "metadata": {
-        "id": "0IkL08CNTDMK"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "MLD3uy1RYuTZ"
+      },
       "source": [
         "### Hacks\n",
         "\n",
@@ -401,13 +404,15 @@
         "- withdraw(double amount): Withdraws a given amount from the account, but only if the withdrawal amount is less than or equal to the current balance.\n",
         "\n",
         "Ensure that the balance is never negative."
-      ],
-      "metadata": {
-        "id": "MLD3uy1RYuTZ"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "qZ8LkNJJY9KL"
+      },
+      "outputs": [],
       "source": [
         "public class BankAccount {\n",
         "    private String accountHolder;\n",
@@ -451,12 +456,7 @@
         "        System.out.println(\"Current balance: \" + account.balance);\n",
         "    }\n",
         "}\n"
-      ],
-      "metadata": {
-        "id": "qZ8LkNJJY9KL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -469,6 +469,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "tbazNTesVlnd"
+      },
       "source": [
         "- Method Declaration: Define methods using the method keyword, specifying return type, method name, and parameters.\n",
         "- Method Parameters: Methods can take input parameters.\n",
@@ -480,22 +483,24 @@
         "- Method Invocation: Call methods using the dot notation on objects or classes (for static methods).\n",
         "- Recursive Methods: Methods can call themselves, creating recursive functions.\n",
         "- Varargs (Variable-Length Argument Lists): Use varargs to pass a variable number of arguments to a method."
-      ],
-      "metadata": {
-        "id": "tbazNTesVlnd"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Example"
-      ],
       "metadata": {
         "id": "QtZTO0ARWTIP"
-      }
+      },
+      "source": [
+        "### Example"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KiOmNj-WWPx2"
+      },
+      "outputs": [],
       "source": [
         "public class Calculator {\n",
         "    public int add(int operand1, int operand2) {\n",
@@ -531,15 +536,13 @@
         "        System.out.println(\"Division: \" + resultDivide);\n",
         "    }\n",
         "}\n"
-      ],
-      "metadata": {
-        "id": "KiOmNj-WWPx2"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "X8TrviaRZABg"
+      },
       "source": [
         "### Hacks\n",
         "\n",
@@ -549,13 +552,15 @@
         "- isPrime(int number): Check if a given integer is prime.\n",
         "- findFactors(int number): Find and return an array of factors for a given integer.\n",
         "Include proper error handling for edge cases and invalid input."
-      ],
-      "metadata": {
-        "id": "X8TrviaRZABg"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "eviU1V0YZMtP"
+      },
+      "outputs": [],
       "source": [
         "public class MathUtility {\n",
         "    // Implement the calculateAverage method\n",
@@ -594,12 +599,7 @@
         "        }\n",
         "    }\n",
         "}"
-      ],
-      "metadata": {
-        "id": "eviU1V0YZMtP"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -625,7 +625,112 @@
         "id": "Xuj9qtZb4wtK"
       },
       "source": [
-        "<h2> 5.9 </h2>"
+        "## 5.9 this Keyword\n",
+        "\n",
+        "**this keyword** \n",
+        "<details>a keyword that essentially refers to the object that is calling the method or the object that the constructor is trying to make</detail>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Can be used 3 Ways:\n",
+        "\n",
+        "1. **refer to instance variable**  > This will solve the problem of having duplicate variable names. To distinguish the instance and local variables, we use this.variableName for the instance variable and simply variableName for the local variable.\n",
+        "\n",
+        "2. **parameter** > Sometimes, we can also use the object as a parameter in its own method call to use itself in the method by using objectName.methodName(this).\n",
+        "\n",
+        "3. **constructor or method call** > Sometimes, we can also use the object as a parameter in its own method call to use itself in the method by using objectName.methodName(this)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "public class Dog {\n",
+        "    private String breed;\n",
+        "\n",
+        "    public String getBreed(){\n",
+        "        return breed;\n",
+        "    }\n",
+        "\n",
+        "    public boolean isSameBreed(Dog otherDog){\n",
+        "        return         \n",
+        "        // breed.equals(otherDog.breed);\n",
+        "        // this.breed.equals(otherDog.breed);\n",
+        "        // **this** makes the code more readable/clear but is not required\n",
+        "    }\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "public class DogCompetition {\n",
+        "\n",
+        "    public boolean doBreedMatch (Dog dog1, Dog dog2){\n",
+        "        return this.getBreed().equals(dog2.getBreed());\n",
+        "        // **this** refers to object which was used to call doBreedsMatch and is a DogCompetition object, not dog object (CANNOT CALL getBreed())\n",
+        "        // this.dog1\n",
+        "        // dog1 is not data member (parameter) so incorrect\n",
+        "        // doBreedMatch doesn't use any data from DogCompetition class no way to use this\n",
+        "    }\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Local vs Instance\n",
+        "\n",
+        "Make the code a little clearer by using the **this** keyword\n",
+        "\n",
+        "b,a,w,and s aren't meaningful parameters change them into breed, age, weight, and score \n",
+        "\n",
+        "distinguish the local and instance variables using the **this** keyword"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "java"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "public class Dog {\n",
+        "    private String breed;\n",
+        "    private int age;\n",
+        "    private double weight;\n",
+        "    private double score;\n",
+        "\n",
+        "    public Dog(sting b, int a, double w, double s){\n",
+        "        // 1. make this code a little clearer by using the **this** keyword\n",
+        "        // 2. change the parameters into something more meaningful\n",
+        "        // 3. distinguish local vs instance variables using **this** keyword\n",
+        "        breed = b;\n",
+        "        age = a;\n",
+        "        weight = w;\n",
+        "        score - s;\n",
+        "    }\n",
+        "}"
       ]
     },
     {
@@ -634,11 +739,36 @@
         "id": "Bp-8clf74wtK"
       },
       "source": [
-        "<h2> 5.10 </h2>"
+        "## 5.10 Ethical and Social Implications of Computing Systems\n",
+        "\n",
+        "### Impacts\n",
+        "\n",
+        "Programming affects the world in many ways, such as socially, economically, and culturally. For instance, not everyone has the same access to technology and computer programs, which creates social inequalities. Some people can use technology, while others can't. **Digital Divide**\n",
+        "\n",
+        "The global economy relies heavily on technology and computer programs, especially in areas like stock trading and economic predictions. Programming and technology have also made the world more connected, allowing different cultures to mix and making it easier for people to communicate globally. However, this has also created a gap between generations, with younger people having more exposure to digital technology than older generations.\n",
+        "\n",
+        "**These impacts on society, the economy, and culture can be both good and bad.**\n",
+        "\n",
+        "### System Reliability\n",
+        "\n",
+        "When programmers create software, they need to consider how reliable the system is. Different devices can perform the same task at varying speeds and in different ways. Each system may have security issues that hackers can exploit.\n",
+        "\n",
+        "To make systems more reliable, programmers need to fix any bugs as soon as they find them. These fixes are then released to users as updates or patches to ensure that computers can be used safely and correctly.\n",
+        "\n",
+        "### Intellectual Property\n",
+        "\n",
+        "Usually, when people create programs on the internet, they own them. However, open source programs blur this line. In open source programs, anyone can make improvements to the code if the program owner allows it.\n",
+        "\n",
+        "Licensing and access also play a role in letting others adapt and build on existing code to create their own programs. There are different types of licenses, like Creative Commons and MIT License, each serving different purposes.\n",
+        "\n",
+        "Here is an [article](https://docs.github.com/en/communities/setting-up-your-project-for-healthy-contributions/adding-a-license-to-a-repository) on how to add a license on your Repository"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -647,9 +777,6 @@
     "language_info": {
       "name": "python",
       "version": "3.11.5"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
